BF TacletExec: Do not get parent OriginRefs in split operations etc